// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeBlock should handle empty code snippets 1`] = `
<pre
  className="language-javascript"
>
  
</pre>
`;

exports[`CodeBlock should match snapshot 1`] = `
<pre
  className=""
/>
`;

exports[`CodeBlock should remove weird indentation from multi line snippets 1`] = `
<pre
  className=""
>
  &lt;p&gt;
    Hello, World!
  &lt;/p&gt;
</pre>
`;

exports[`CodeBlock should remove weird indentation from multi line snippets 2`] = `
<pre
  className=""
>
  &lt;p&gt;
    Hello, World!
  &lt;/p&gt;
</pre>
`;

exports[`CodeBlock should remove weird indentation from single line snippets 1`] = `
<pre
  className=""
>
  console.log('test')
</pre>
`;

exports[`CodeBlock should remove weird indentation from single line snippets 2`] = `
<pre
  className=""
>
  console.log('test')
</pre>
`;

exports[`CodeBlock should take an optional language prop 1`] = `
<pre
  className="language-javascript"
/>
`;
